--- a/index.css
+++ b/index.css
@@ -1,13 +1,56 @@
 #main {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  background-color: rgb(153, 0, 255);
 }
 
-#github-container {
-  display: flex;
+#body-title{
+  text-align: center;
 }
 
-ul {
-  list-style: none;
+#body-subtitle {
+text-align: center;
+}
+
+#film-container img {
+  flex: 0 1 auto;
+  height: 150px;
+  margin-right: 0.5rem;
+}
+
+.card {
+  box-shadow: 0 4px 8px 0 rgba(231, 111, 111, 0.2);
+  max-width: 300px;
+  margin: auto;
+  text-align: center;
+  background-color: rgb(31, 31, 49);
+}
+
+.sidenav {
+height: 100%; 
+width: 300px; 
+position: fixed; 
+z-index: 1; 
+top: 0; 
+left: 0;
+background-color: #111; 
+overflow-x: hidden;
+padding-top: 20px;
+}
+
+.sidenav .film-list {
+  padding: 6px 8px 6px 16px;
+  text-decoration: none;
+  font-size: 25px;
+  color: rgb(82, 2, 2);
+  display: block;
+  cursor: pointer;
+  word-break: break-al;
+}
+
+.sidenav .film-list:hover {
+  color: greenyellow;
+}
+
+button {
+background-color: green;
+color: white;  
 }
